<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/back_login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="180dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="#40FCF9F9"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="2dp"
            card_view:cardMaxElevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">





                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_login"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_marginTop="50dp"
                    android:hint="@string/identifiant"
                    app:helperTextEnabled="true"
                    app:startIconContentDescription="@string/identifiant"
                    app:startIconDrawable="@drawable/ic_identifiant">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword"
                    app:helperText="@string/obilgatoire"
                    app:startIconContentDescription="@string/mdp"
                    app:startIconDrawable="@drawable/ic_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/garder_ma_session_active"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="158dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/connexion"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="14sp"
                    android:textStyle="normal" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="150dp">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:clickable="true"
                android:layout_gravity="center"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardBackgroundColor="#2FFCF9F9"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="2dp"
                card_view:cardMaxElevation="2dp"
                android:layout_centerInParent="true">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/logo" />


            </androidx.cardview.widget.CardView>

        </RelativeLayout>



    </RelativeLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="70dp"
   >
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="Mot de passe oublié"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btn_ins"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="inscription"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />
</LinearLayout>


</RelativeLayout>